CHATS_SIT/force-app/main/default/objects/batchsit_t_eligty_run__x.object
<CustomObject>
    <description>batchsit$t_eligty_run</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>batchsit$t_eligty_run</externalName>
    <fields>
        <fullName>cde_date_redet_ovrd__c</fullName>
        <description>cde_date_redet_ovrd</description>
        <externalDeveloperName>cde_date_redet_ovrd</externalDeveloperName>
        <label>Determined Redetermination Date Reason</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_eligty_cfmd__c</fullName>
        <description>cde_eligty_cfmd</description>
        <externalDeveloperName>cde_eligty_cfmd</externalDeveloperName>
        <label>Eligibility Confirmed Status</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>createdbyid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>createdbyid</description>
        <externalDeveloperName>createdbyid</externalDeveloperName>
        <label>Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>batchsit_t_eligty_run</relationshipName>
        <type>Lookup</type>
     </fields>
    <fields>
        <fullName>createddate__c</fullName>
        <description>createddate</description>
        <externalDeveloperName>createddate</externalDeveloperName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_redet_ovrd__c</fullName>
        <description>dte_redet_ovrd</description>
        <externalDeveloperName>dte_redet_ovrd</externalDeveloperName>
        <label>Determined Redetermination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_redet_prpsd__c</fullName>
        <description>dte_redet_prpsd</description>
        <externalDeveloperName>dte_redet_prpsd</externalDeveloperName>
        <label>System Determined Redetermination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_run_eligty__c</fullName>
        <description>dte_run_eligty</description>
        <externalDeveloperName>dte_run_eligty</externalDeveloperName>
        <label>Run Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>idn_case__c</fullName>
        <description>idn_case</description>
        <externalDeveloperName>idn_case</externalDeveloperName>
        <label>Case ID</label>
        <length>50</length>
        <referenceTargetField>T_SBSD_CASE__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_SBSD_CASE__c</referenceTo>
        <relationshipLabel>Eligibility Run</relationshipLabel>
        <relationshipName>batchsit_t_eligty_run</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_run_eligty__c</fullName>
        <description>idn_run_eligty</description>
        <externalDeveloperName>idn_run_eligty</externalDeveloperName>
        <label>Eligibility Run ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lastmodifiedbyid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lastmodifiedbyid</description>
        <externalDeveloperName>lastmodifiedbyid</externalDeveloperName>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>batchsit_t_eligty_run1</relationshipName>
        <type>Lookup</type>
     </fields>
    <fields>
        <fullName>lastmodifieddate__c</fullName>
        <description>lastmodifieddate</description>
        <externalDeveloperName>lastmodifieddate</externalDeveloperName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>nbr_seq_hist__c</fullName>
        <description>nbr_seq_hist</description>
        <externalDeveloperName>nbr_seq_hist</externalDeveloperName>
        <label>Number sequence history</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>txt_cmt_ovrd__c</fullName>
        <description>txt_cmt_ovrd</description>
        <externalDeveloperName>txt_cmt_ovrd</externalDeveloperName>
        <label>Determined Redetermination Date Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dte_appln_old__c</fullName>
        <externalDeveloperName>dte_appln_old</externalDeveloperName>
        <label>Previous Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_appln_new__c</fullName>
        <externalDeveloperName>dte_appln_new</externalDeveloperName>
        <label>Application Override Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rsn_appln_dte_override__c</fullName>
        <label>Application Date Override Reason</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cmt_appln_dte_override__c</fullName>
        <label>Application Date Override Comments</label>
        <type>TextArea</type>
    </fields>
    <label>Eligibility Run</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ExternalId</columns>
        <columns>DisplayUrl</columns>
        <columns>idn_case__c</columns>
        <columns>cde_eligty_cfmd__c</columns>
        <columns>idn_run_eligty__c</columns>
        <columns>dte_run_eligty__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>Eligibility Run</pluralLabel> 
</CustomObject>