CHATS_SIT/force-app/main/default/objects/batchsit_t_eligty_run__x/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ExternalId</columns>
    <columns>DisplayUrl</columns>
    <columns>idn_case__c</columns>
    <columns>cde_eligty_cfmd__c</columns>
    <columns>idn_run_eligty__c</columns>
    <columns>dte_run_eligty__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>